--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <p>© 2026 MyShop. All Rights Reserved.</p>
+      <p>© 2026 MyShop. Nothing reserved</p>
     </footer>
   </body>
 </html>
